fix layout issues and continue redesign

--- a/src/index.css
+++ b/src/index.css
@@ -71,4 +71,5 @@ button:focus-visible {
 #root {
   margin: auto;
   display: block;
+  width: 100%;
 }
